--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MedScan">
         <activity
+            android:name=".RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true" />
+        <activity
             android:name=".Login"
+            android:exported="true" />
+        <activity
+            android:name=".SuccessResetPass"
             android:exported="true" />
         <activity
             android:name=".Welcome"
             android:exported="true" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ForgetPassword"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
