--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,16 @@
             android:exported="true">
 
         </activity>
+        <activity
+            android:name=".HomeActivity"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".DetailsPatientActivity"
+            android:exported="true">
+
+        </activity>
     </application>
 
 </manifest>
