--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,6 @@ dependencies {
 
     implementation platform('com.google.firebase:firebase-bom:29.0.2')
     implementation 'com.google.android.gms:play-services-auth:20.0.0'
+    implementation 'com.facebook.android:facebook-android-sdk:latest.release'
+
 }
