--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MedScan">
         <activity
+            android:name=".FacebookAuth"
+            android:exported="true" />
+        <activity
             android:name=".GoogleAuth"
             android:exported="true" />
         <activity
@@ -44,6 +47,10 @@
         <activity
             android:name=".DetailsPatientActivity"
             android:exported="true" />
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
     </application>
 
 </manifest>
