--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,5 +46,7 @@ dependencies {
     implementation 'com.facebook.android:facebook-android-sdk:latest.release'
     implementation 'com.google.firebase:firebase-database'
 
+    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+
 
 }
