--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.medscan">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -10,71 +9,29 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="false"
-        android:theme="@style/Theme.MedScan"
-        tools:replace="android:supportsRtl">
+        android:supportsRtl="true"
+        android:theme="@style/Theme.MedScan">
         <activity
-            android:name=".shared_doc6"
-            android:exported="true"
-            android:screenOrientation="portrait"/>
+            android:name=".PatientEdit"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
-            android:name=".hospital"
-            android:exported="true"
-            android:launchMode="singleTask"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.Transparent" />
+            android:name=".Instruction"
+            android:exported="false" />
         <activity
-            android:name=".shared_doc5"
-            android:exported="true"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".shared_doc4"
-            android:exported="true"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".shared_doc3"
-            android:exported="true"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".shared_doc2"
-            android:exported="true"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".shared_doc1"
-            android:exported="true"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".doctors"
-            android:exported="true"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".health"
-            android:exported="true"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".DetailsDonor"
-            android:exported="true"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".Feedback"
-            android:exported="true"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".FacebookAuth"
-            android:exported="true"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".GoogleAuth"
-            android:exported="true"
-            android:screenOrientation="portrait" />
+            android:name=".RayUploaded"
+            android:exported="false" />
         <activity
             android:name=".RegisterActivity"
-            android:exported="true"
-            android:screenOrientation="portrait" />
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:screenOrientation="portrait">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -83,32 +40,26 @@
         </activity>
         <activity
             android:name=".Login"
-            android:exported="true"
-            android:screenOrientation="portrait" />
+            android:exported="true" />
         <activity
             android:name=".SuccessResetPass"
-            android:exported="true"
-            android:screenOrientation="portrait" />
+            android:exported="true" />
         <activity
             android:name=".Welcome"
-            android:exported="true"
-            android:screenOrientation="portrait" />
+            android:exported="true" />
         <activity
             android:name=".ForgetPassword"
-            android:exported="true"
-            android:screenOrientation="portrait" />
+            android:exported="true" />
         <activity
             android:name=".HomeActivity"
-            android:exported="true"
-            android:screenOrientation="portrait" />
+            android:exported="true" />
         <activity
             android:name=".DetailsPatientActivity"
-            android:exported="true"
-            android:screenOrientation="portrait" />
+            android:exported="true" />
 
         <meta-data
-            android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id" />
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
