--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,21 @@
         android:theme="@style/Theme.MedScan"
         tools:replace="android:supportsRtl">
         <activity
+            android:name=".best_doctors"
+            android:exported="true"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".choose_field"
+            android:exported="true"
+            android:screenOrientation="portrait"/>
+        <activity
             android:name=".successful"
             android:exported="true"
             android:screenOrientation="portrait" />
-        <activity android:name=".failed"
+        <activity
+            android:name=".failed"
             android:exported="true"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".shared_doc6"
             android:exported="true"
