--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,9 @@
     package="com.example.medscan">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -15,11 +17,79 @@
         android:theme="@style/Theme.MedScan"
         tools:replace="android:supportsRtl">
         <activity
+            android:name=".skin_image"
+            android:exported="true"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".skin_hospitals"
+            android:exported="true"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.Transparent" />
+        <activity
+            android:name=".skin_doctors"
+            android:exported="true"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".skin_doc2"
+            android:exported="true"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".skin_doc1"
+            android:exported="true"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".lung_hospitals"
+            android:exported="true"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.Transparent" />
+        <activity
+            android:name=".lung_doctors"
+            android:exported="true"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".lung_doc6"
+            android:exported="true"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".lung_doc5"
+            android:exported="true"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".lung_doc4"
+            android:exported="true"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".lung_doc3"
+            android:exported="true"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".lung_doc2"
+            android:exported="true"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".lung_doc1"
+            android:exported="true"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".eyes_hospitals"
+            android:exported="true"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.Transparent"/>
+        <activity
+            android:name=".eyes_doctors"
+            android:exported="true"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".eyes_image"
-            android:exported="true" />
+            android:exported="true"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".kidney_upload"
-            android:exported="true" />
+            android:exported="true"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".header"
             android:exported="true"
@@ -156,6 +226,11 @@
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
+
+        <activity
+            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Base.Theme.AppCompat" />
     </application>
 
 </manifest>
