--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,24 @@
         android:theme="@style/Theme.MedScan"
         tools:replace="android:supportsRtl">
         <activity
+            android:name=".eyes_doc6"
+            android:exported="true" />
+        <activity
+            android:name=".eyes_doc5"
+            android:exported="true" />
+        <activity
+            android:name=".eyes_doc4"
+            android:exported="true" />
+        <activity
+            android:name=".eyes_doc3"
+            android:exported="true" />
+        <activity
+            android:name=".eyes_doc2"
+            android:exported="true" />
+        <activity
+            android:name=".eyes_doc1"
+            android:exported="true" />
+        <activity
             android:name=".skin_doc6"
             android:exported="true" />
         <activity
