--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -209,7 +209,7 @@
             android:exported="true"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".skin.DetailsDonor"
+            android:name=".DetailsDonor"
             android:exported="true"
             android:screenOrientation="portrait" />
         <activity
