--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildFeatures{
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -54,6 +57,17 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.google.firebase:firebase-storage:20.0.1'
     implementation'com.squareup.picasso:picasso:2.71828'
+
+    implementation'com.intuit.ssp:ssp-android:1.0.6'
+    implementation'com.intuit.sdp:sdp-android:1.0.6'
+
+    implementation'com.makeramen:roundedimageview:2.3.0'
+
+
+
+
+
+
 
 
 
