--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     implementation'com.intuit.sdp:sdp-android:1.0.6'
 
     implementation'com.makeramen:roundedimageview:2.3.0'
+    implementation'com.theartofdev.edmodo:android_image-cropper:2.8.+'
 
 
 
