--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,17 +17,20 @@
         android:theme="@style/Theme.MedScan"
         tools:replace="android:supportsRtl">
         <activity
+            android:name=".skin.skin_menu"
+            android:exported="true" />
+        <activity
             android:name=".chat.chat_activity"
             android:exported="true"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".chat.chat_home"
             android:exported="true"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".chat.chat_user"
             android:exported="true"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".lungs.successful_advice"
             android:exported="true"
@@ -269,8 +272,7 @@
         <activity
             android:name=".HomeActivity"
             android:exported="true"
-            android:screenOrientation="portrait"
-            />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".menu.PatientEdit"
             android:exported="true"
@@ -287,9 +289,6 @@
             android:name=".menu.Instruction"
             android:exported="true"
             android:screenOrientation="portrait" />
-        
-
-
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
