--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,8 @@ dependencies {
     implementation'com.makeramen:roundedimageview:2.3.0'
     implementation'com.theartofdev.edmodo:android-image-cropper:2.8.+'
 
+    implementation'com.github.bumptech.glide:glide:4.8.0'
+
 
 
 
