--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.medscan">
+    package="com.example.medscan" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -15,7 +15,76 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="false"
         android:theme="@style/Theme.MedScan"
-        tools:replace="android:supportsRtl">
+        tools:replace="android:supportsRtl" >
+        <activity
+            android:name=".skin.melanocytic_nevi_info"
+            android:exported="true" />
+        <activity
+            android:name=".skin.melanoma_info"
+            android:exported="true" />
+        <activity
+            android:name=".skin.dermatofibroma_info"
+            android:exported="true" />
+        <activity
+            android:name=".skin.seborrheic_keratosis_info"
+            android:exported="true" />
+        <activity
+            android:name=".skin.intraepithelial_carcinoma_info"
+            android:exported="true" />
+        <activity
+            android:name=".skin.basal_cell_carcinoma_info"
+            android:exported="true" />
+        <activity
+            android:name=".skin.actinic_keratosis_info"
+            android:exported="true" />
+        <activity
+            android:name=".skin.seborrheic_keratosis_advice"
+            android:exported="true" />
+        <activity
+            android:name=".skin.melanoma_advice"
+            android:exported="true" />
+        <activity
+            android:name=".skin.melanocytic_nevi_advice"
+            android:exported="true" />
+        <activity
+            android:name=".skin.intraepithelial_carcinoma_advice"
+            android:exported="true" />
+        <activity
+            android:name=".skin.dermatofibroma_advice"
+            android:exported="true" />
+        <activity
+            android:name=".skin.basal_cell_carcinoma_advice"
+            android:exported="true" />
+        <activity
+            android:name=".skin.actinic_keratosis_advice"
+            android:exported="true" />
+        <activity
+            android:name=".skin.successful_skin_advice"
+            android:exported="true" />
+        <activity
+            android:name=".skin.successful_skin"
+            android:exported="true" />
+        <activity
+            android:name=".skin.melanocytic_nevi"
+            android:exported="true" />
+        <activity
+            android:name=".skin.melanoma"
+            android:exported="true" />
+        <activity
+            android:name=".skin.dermatofibroma"
+            android:exported="true" />
+        <activity
+            android:name=".skin.seborrheic_keratosis"
+            android:exported="true" />
+        <activity
+            android:name=".skin.basal_cell_carcinoma"
+            android:exported="true" />
+        <activity
+            android:name=".skin.intraepithelial_carcinoma"
+            android:exported="true" />
+        <activity
+            android:name=".skin.actinic_keratosis"
+            android:exported="true" />
         <activity
             android:name=".skin.skin_menu"
             android:exported="true" />
@@ -246,7 +315,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -298,7 +367,7 @@
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.example.android.fileprovider"
             android:exported="false"
-            android:grantUriPermissions="true">
+            android:grantUriPermissions="true" >
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
